# watch_dir

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml  publish.yml
dev_test_main/: Cargo.toml
dev_test_main/src/: main.rs
ed_log_scraper/: Cargo.toml
ed_log_scraper/src/: file_reader.rs  folder_watcher.rs  lib.rs
example_data/: Backpack.json  Cargo.json  FCMaterials.json  Market.json  ModulesInfo.json  NavRoute.json  Outfitting.json  ShipLocker.json  Shipyard.json  Status.json
examples/: multi_stragety_example.rs  replace_stragety_example.rs
src/: error.rs  file_reader.rs  folder_watcher.rs  lib.rs  main.rs  options.rs  read_strategy.rs  watcher.rs  worker.rs
src/read_strategy/: mod.rs
tests/: replace_stragety_test.rs  replace_strategy_test.rs  tail_lines_stragety_test.rs  tail_stragety_test.rs
tests/common/: mod.rs
watch_dir/: Cargo.toml
watch_dir/src/: folder_watcher.rs
